force-app/main/default/objects/TT_Order_detail__c/TT_Order_detail__c.object-meta.xml
<CustomObject>
    <label>TT Order detail</label>
    <nameField>
        <label>Order detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TT Order details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>