force-app/main/default/objects/TT_Order_detail__c/fields/TTCustomer__c.field-meta.xml
<CustomField>
    <fullName>TTCustomer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TTCustomer</label>
    <referenceTo>TTCustomer__c</referenceTo>
    <relationshipLabel>TT Order details</relationshipLabel>
    <relationshipName>TT_Order_details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>