force-app/main/default/objects/TT_Order_detail__c/fields/TTOrder__c.field-meta.xml
<CustomField>
    <fullName>TTOrder__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TTOrder</label>
    <referenceTo>TTOrder__c</referenceTo>
    <relationshipName>Order_details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>