force-app/main/default/objects/TT_Order_detail__c/fields/TTProduct__c.field-meta.xml
<CustomField>
    <fullName>TTProduct__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TTProduct</label>
    <referenceTo>TTProduct__c</referenceTo>
    <relationshipName>Order_details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>