force-app/main/default/objects/TT_Order_detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TTCustomer__c</columns>
    <columns>TTOrder__c</columns>
    <columns>TTProduct__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>